--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -1,2 +1,19 @@
 drugs.list=\u836F\u54C1\u6E05\u5355
 drugs.welcome=\u4F60\u597D\uFF01 \u6B22\u8FCE\u60A8\u67E5\u770B\u836F\u54C1\u6E05\u5355\uFF01
+drugs.requirement=\u6240\u9700\u914D\u65B9
+drugs.name=\u59D3\u540D
+drugs.dose=\u5242\u91CF
+drugs.quantity=\u6570\u91CF
+drugs.price=\u4EF7\u683C
+drugs.prescription=\u5904\u65B9
+drugs.amount=\u91D1\u989D
+drugs.date=\u5230\u671F\u65E5
+drugs.cart=\u52A0\u5165\u8D2D\u7269\u8F66
+drugs.no=\u672A\u627E\u5230\u8BB0\u5F55
+drugs.records1=\u8BB0\u5F55\uFF1A\u6765\u81EA
+drugs.records2=\u81F3
+drugs.records3=\u7684
+drugs.records4=\u6BCF\u9875\u8BB0\u5F55
+drugs.delete=\u5220\u9664
+drugs.total=\u603B\u8BA1
+drugs.buy=\u8D2D\u4E70\u836F\u7269
