--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -17,3 +17,5 @@ drugs.records4=\u6BCF\u9875\u8BB0\u5F55
 drugs.delete=\u5220\u9664
 drugs.total=\u603B\u8BA1
 drugs.buy=\u8D2D\u4E70\u836F\u7269
+drugs.title=\u6BD2\u54C1\u6CD5\u6848
+drugs.caption=\u4E70\u7684\u836F\u7269
