--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -9,7 +9,7 @@ drugs.prescription=\u5904\u65B9
 drugs.amount=\u91D1\u989D
 drugs.date=\u5230\u671F\u65E5
 drugs.cart=\u52A0\u5165\u8D2D\u7269\u8F66
-drugs.no=\u672A\u627E\u5230\u8BB0\u5F55
+drugs.absence=\u672A\u627E\u5230\u8BB0\u5F55
 drugs.records1=\u8BB0\u5F55\uFF1A\u6765\u81EA
 drugs.records2=\u81F3
 drugs.records3=\u7684
@@ -19,3 +19,5 @@ drugs.total=\u603B\u8BA1
 drugs.buy=\u8D2D\u4E70\u836F\u7269
 drugs.title=\u6BD2\u54C1\u6CD5\u6848
 drugs.caption=\u4E70\u7684\u836F\u7269
+drugs.no=\u975E\u4E5F\u3002
+drugs.yes=\u662F\u7684
