--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -21,3 +21,4 @@ drugs.title=\u6BD2\u54C1\u6CD5\u6848
 drugs.caption=\u4E70\u7684\u836F\u7269
 drugs.no=\u975E\u4E5F\u3002
 drugs.yes=\u662F\u7684
+drugs.create=\u521B\u5EFA\u836F\u7269
