--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -5,7 +5,7 @@ drugs.name=\u59D3\u540D
 drugs.dose=\u5242\u91CF
 drugs.quantity=\u6570\u91CF
 drugs.price=\u4EF7\u683C
-drugs.prescription=\u5904\u65B9
+drugs.add=\u6DFB\u52A0
 drugs.amount=\u91D1\u989D
 drugs.date=\u5230\u671F\u65E5
 drugs.cart=\u52A0\u5165\u8D2D\u7269\u8F66
@@ -22,3 +22,4 @@ drugs.caption=\u4E70\u7684\u836F\u7269
 drugs.no=\u975E\u4E5F\u3002
 drugs.yes=\u662F\u7684
 drugs.create=\u521B\u5EFA\u836F\u7269
+drugs.recipe=\u521B\u5EFA\u98DF\u8C31
