--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -6,6 +6,7 @@ drugs.dose=\u5242\u91CF
 drugs.quantity=\u6570\u91CF
 drugs.price=\u4EF7\u683C
 drugs.add=\u6DFB\u52A0
+drugs.prescription=\u5904\u65B9
 drugs.amount=\u91D1\u989D
 drugs.date=\u5230\u671F\u65E5
 drugs.cart=\u52A0\u5165\u8D2D\u7269\u8F66
