--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -11,12 +11,12 @@ drugs.amount=\u91D1\u989D
 drugs.date=\u5230\u671F\u65E5
 drugs.cart=\u52A0\u5165\u8D2D\u7269\u8F66
 drugs.absence=\u672A\u627E\u5230\u8BB0\u5F55
-drugs.records1=\u8BB0\u5F55\uFF1A\u6765\u81EA
-drugs.records2=\u81F3
-drugs.records3=\u7684
-drugs.records4=\u6BCF\u9875\u8BB0\u5F55
+drugs.items1=\u8BB0\u5F55\uFF1A\u6765\u81EA
+drugs.items2=\u81F3
+drugs.items3=\u7684
+drugs.items4=\u6BCF\u9875\u8BB0\u5F55:
 drugs.delete=\u5220\u9664
-drugs.total=\u603B\u8BA1
+drugs.total=\u603B\u8BA1:
 drugs.buy=\u8D2D\u4E70\u836F\u7269
 drugs.title=\u6BD2\u54C1\u6CD5\u6848
 drugs.caption=\u4E70\u7684\u836F\u7269
@@ -24,3 +24,4 @@ drugs.no=\u975E\u4E5F\u3002
 drugs.yes=\u662F\u7684
 drugs.create=\u521B\u5EFA\u836F\u7269
 drugs.recipe=\u521B\u5EFA\u98DF\u8C31
+drugs.table=\u8D2D\u7269\u8F66
