--- a/src/Drugs_zh_CHINESE.properties
+++ b/src/Drugs_zh_CHINESE.properties
@@ -25,3 +25,4 @@ drugs.yes=\u662F\u7684
 drugs.create=\u521B\u5EFA\u836F\u7269
 drugs.recipe=\u521B\u5EFA\u98DF\u8C31
 drugs.table=\u8D2D\u7269\u8F66
+drugs.current=\u5F53\u524D\u914D\u65B9
